# serverops-ai-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  serverops-ai-bot.service
app/: __init__.py  bot.py  config.py  healthcheck.py  main.py
app/ai/: __init__.py  client.py  prompts.py  router.py  schemas.py  service.py
app/alerts/: __init__.py  scheduler.py
app/commands/: actions.py  ai.py  audit.py  help.py  readonly.py
app/core/: __init__.py  alerts.py  audit.py  confirmations.py  logging.py  messages.py  security.py
app/db/: __init__.py  database.py
app/tools/: __init__.py  docker_tools.py  log_tools.py  service_tools.py  system_tools.py
docs/: README.md  architecture.md  development.md  roadmap.md  upgrade-roadmap.md
docs/specs/: mvp.md  upgrades.md
tests/: test_actions.py  test_ai_commands.py  test_ai_full_loop.py  test_ai_router.py  test_ai_service.py  test_alerts.py  test_audit.py  test_audit_command.py  test_bot.py  test_config.py  test_confirmations.py  test_docker_tools.py  test_help_command.py  test_log_tools.py  test_logging.py  test_readonly_commands.py  test_security.py  test_service_tools.py
