[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "serverops-ai-bot"
version = "0.1.0"
description = "Safe Telegram AI assistant for Linux, Docker, logs, and lightweight server operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.10",
    "docker>=7.0",
    "openai>=1.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

